test/files/neg/bug1845.check
bug1845.scala:9: error: illegal cyclic reference involving value <import>
  val lexical = new StdLexical
                    ^
one error found
